# RadarPrj

./: CMakeLists.txt  GeneratorWindow.qml  Main.qml  MapView.qml  main.cpp  networkmanager.cpp  networkmanager.h  processmanager.cpp  processmanager.h  radarlogic.cpp  radarlogic.h  radarmodel.cpp  radarmodel.h  sender.py  target.h
